fix the wrap size

--- a/public/style.scss
+++ b/public/style.scss
@@ -10,7 +10,7 @@
 }
 .wrap{
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     padding: 30px;
     background-color: #6D87E2;
     .header{
